# delta-lake-polars

./: .gitignore  .pre-commit-config.yaml  README.md  pre-commit-config.yaml  pyproject.toml
.github/workflows/: ci.yaml
code/: batch_producer.py  main.py  micro_batch_stream_producer.py  microbatch_stream_consumer.py  minimal_local.py
infra/: az.tf  eh.tf  storage.tf
